[gd_scene load_steps=18 format=3 uid="uid://xcmgada1gq11"]

[ext_resource type="Script" path="res://Scripts/Kid/Player.gd" id="1_nq3ie"]
[ext_resource type="Texture2D" uid="uid://dkvfwfgvnpm7t" path="res://Assets/Kid/Kid.png" id="2_ilpdt"]
[ext_resource type="Texture2D" uid="uid://c1pkyrwwmtoux" path="res://Assets/Kid/Bow.png" id="3_efdlv"]
[ext_resource type="Texture2D" uid="uid://cw2gockwywek" path="res://Assets/Kid/JumpEffect.png" id="5_ahyg1"]
[ext_resource type="Texture2D" uid="uid://dxkqdkwgos2e1" path="res://Assets/Kid/DJumpEffect.png" id="5_htijx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6dy2q"]
size = Vector2(11, 21)

[sub_resource type="Animation" id="Animation_00mnp"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_fn8b5"]
resource_name = "exit_warp"
length = 0.2
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05, 0.075, 0.1, 0.125, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [20, 19, 18, 17, 16, 15, 14]
}

[sub_resource type="Animation" id="Animation_62otp"]
resource_name = "fall"
length = 0.14
loop_mode = 1
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [10, 11]
}

[sub_resource type="Animation" id="Animation_mfa3i"]
resource_name = "idle"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_vxbky"]
resource_name = "jump"
length = 0.14
loop_mode = 1
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [8, 9]
}

[sub_resource type="Animation" id="Animation_twv0e"]
resource_name = "twirl"
length = 0.9
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225, 0.3, 0.375, 0.45, 0.525, 0.6, 0.675, 0.75, 0.825),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44]
}

[sub_resource type="Animation" id="Animation_a2nup"]
resource_name = "vine"
length = 0.14
loop_mode = 1
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_jgaaw"]
resource_name = "walk"
length = 0.28
loop_mode = 1
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.14, 0.21),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_jw6y8"]
resource_name = "warp"
length = 0.2
loop_mode = 2
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.025, 0.05, 0.075, 0.1, 0.125, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3s53i"]
_data = {
"RESET": SubResource("Animation_00mnp"),
"exit_warp": SubResource("Animation_fn8b5"),
"fall": SubResource("Animation_62otp"),
"idle": SubResource("Animation_mfa3i"),
"jump": SubResource("Animation_vxbky"),
"twirl": SubResource("Animation_twv0e"),
"vine": SubResource("Animation_a2nup"),
"walk": SubResource("Animation_jgaaw"),
"warp": SubResource("Animation_jw6y8")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_5vkpp"]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 1
particles_anim_loop = false

[node name="Kid" type="CharacterBody2D" groups=["player"]]
z_index = 2
texture_filter = 1
floor_constant_speed = true
platform_on_leave = 2
script = ExtResource("1_nq3ie")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_ilpdt")
hframes = 46

[node name="Bow" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -16)
texture = ExtResource("3_efdlv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0.5, -10.5)
shape = SubResource("RectangleShape2D_6dy2q")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3s53i")
}

[node name="AreaDetector" type="Area2D" parent="."]
visible = false
collision_priority = 20.0

[node name="CollisionShape2D2" type="CollisionShape2D" parent="AreaDetector"]
position = Vector2(0.5, -10.5)
shape = SubResource("RectangleShape2D_6dy2q")

[node name="JumpEffect" type="Node2D" parent="."]

[node name="JumpEffect3" type="CPUParticles2D" parent="JumpEffect"]
material = SubResource("CanvasItemMaterial_5vkpp")
emitting = false
amount = 2
lifetime = 0.3
one_shot = true
explosiveness = 1.0
texture = ExtResource("5_ahyg1")
direction = Vector2(-1, 0)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 90.0
initial_velocity_max = 90.0
linear_accel_min = -350.0
linear_accel_max = -350.0
anim_speed_min = 1.5
anim_speed_max = 1.5

[node name="JumpEffect4" type="CPUParticles2D" parent="JumpEffect"]
material = SubResource("CanvasItemMaterial_5vkpp")
emitting = false
amount = 2
lifetime = 0.3
one_shot = true
explosiveness = 1.0
texture = ExtResource("5_ahyg1")
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 90.0
initial_velocity_max = 90.0
linear_accel_min = -350.0
linear_accel_max = -350.0
anim_speed_min = 1.5
anim_speed_max = 1.5

[node name="DJumpEffect" type="Node2D" parent="."]

[node name="JumpEffect3" type="CPUParticles2D" parent="DJumpEffect"]
material = SubResource("CanvasItemMaterial_5vkpp")
emitting = false
amount = 2
lifetime = 0.3
one_shot = true
explosiveness = 1.0
texture = ExtResource("5_htijx")
direction = Vector2(-1, 1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 90.0
initial_velocity_max = 90.0
linear_accel_min = -350.0
linear_accel_max = -350.0
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="JumpEffect4" type="CPUParticles2D" parent="DJumpEffect"]
material = SubResource("CanvasItemMaterial_5vkpp")
emitting = false
amount = 2
lifetime = 0.3
one_shot = true
explosiveness = 1.0
texture = ExtResource("5_htijx")
direction = Vector2(1, 1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 90.0
initial_velocity_max = 90.0
linear_accel_min = -350.0
linear_accel_max = -350.0
anim_speed_min = 1.0
anim_speed_max = 1.0

[node name="StateTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="area_entered" from="AreaDetector" to="." method="_on_area_detector_area_entered"]
[connection signal="area_exited" from="AreaDetector" to="." method="_on_area_detector_area_exited"]
[connection signal="body_entered" from="AreaDetector" to="." method="_on_area_detector_body_entered"]
[connection signal="body_exited" from="AreaDetector" to="." method="_on_area_detector_body_exited"]
[connection signal="timeout" from="StateTimer" to="." method="_on_state_timer_timeout"]
